# cs162-project-moodle

./: 1.txt  3000.txt  BeginingOfSem.cpp  BeginingOfSem.h  CMakeLists.txt  Create new class.cpp  Create school year .cpp  Moodle Fake.cpp  README.md  Try to login.cpp  addnewclass.cpp  addnewclass.h  addnewstudent.cpp  addnewstudent.h  class.h  classlist_6.cpp  classlist_6.h  classlist_6.ui  course_database_template.txt  course_infor.cpp  createNewClass.cpp  createNewSchoolYear.cpp  database_function.cpp  database_function.hpp  enrolled_courses.cpp  enrolled_courses.ui  f1.cpp  f1.h  fakeallcourselist.cpp  fakeallcourselist.h  fakeallcourselist.ui  general_function.cpp  general_function.hpp  getInformation.cpp  global.cpp  global.h  login  login_function.cpp  login_function.h  main.cpp  (+17 more)
DS_LOP/K19/: 19CLC11.csv  19CTT1.csv  19CTT2.csv
DS_LOP/K20/: 20CLC11.csv  20CLC4.csv  20CTT1.csv  20CTT2.csv  20VP.csv
DS_LOP/K21/: 21CLC4.csv  21CTT1.csv  21CTT2.csv  21VP.csv
classes/: 20CLC08.txt  20CLC09.txt  20CTT1.txt  20VP.txt  21CLC08.txt  21CLC09.txt  21CTT2.txt  21VP.txt
course_scoreboard/2021/: 2021_Courses_List.txt  BAA001012021.csv  BAA001022021.csv  CM1012021.csv  CS16222021.csv  PH21112021.csv  PH21212021.csv  PH21222021.csv
course_scoreboard/Mark/: BAA00101.csv
dinhquanghieuUI/: course_infor.h
operating_function/: BeginingOfSem.cpp  BeginingOfSem.h  class_database_template.txt  createNewClass.cpp  createNewClass.h  createNewSchoolYear.cpp  database_function.cpp  database_function.hpp  general_function.cpp  general_function.hpp  getInformation.cpp  login_function.cpp  login_function.h  schoolyear.txt  scoreboard_function.cpp  scoreboard_function.hpp  structure.h  student_database_template.txt
subjects/: BAA00102.txt  CS162.txt  MTH252.txt  PH212.txt
subjects/20CTT1/: BAA00022.txt  BAA00104.txt  CS251.txt  EC341.txt  STAT451.txt  WR227.txt
ui/: addnewclass.cpp  addnewclass.h  addnewclass.ui  addnewcourse.cpp  addnewcourse.h  addnewcourse.ui  addnewstudent.cpp  addnewstudent.h  addnewstudent.ui  class_scoreboard.cpp  class_scoreboard.h  class_scoreboard.ui  classlist_6.cpp  classlist_6.h  course_create.cpp  course_create.h  course_create.ui  course_infor.cpp  course_infor.h  course_infor.ui  course_update.cpp  course_update.h  course_update.ui  design14.cpp  design14.h  enrolled_courses.cpp  enrolled_courses.h  enrolled_courses.ui  enrollingcourse_page.cpp  enrollingcourse_page.h  enrollingcourse_page.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  school.cpp  school.h  school.ui  scoreboard_course_staff.cpp  scoreboard_course_staff.h  scoreboard_course_staff.ui  (+12 more)
(+1 files in other folders)
